# Embedded-Linux

./: README.md
AdminLinux_Task1/: Task1.sh
AdminLinux_Task2/Question1/: a.out  binary_search.c
AdminLinux_Task2/Question2/: question2.md  question2.odt
AdminLinux_Task3/: section_2  section_2.md
AdminLinux_Task3/section_1/: README.md  section_1
AdminLinux_Task4/: creat_user.sh  section2.md
AdminLinux_Task5/: section1.md
Embedded_Linux_1/: Readme.md  main.c  test  test2
Embedded_Linux_1/Calculator_Libraries/DynamicLibrary_Lab/Include/: operation.h
Embedded_Linux_1/Calculator_Libraries/staticLibrary_Lab/Lib/: modulus.c  multiplication.c  subtraction.c
Embedded_Linux_2/Embedded_Linux_Task3/: Readme.md  main.c
Embedded_Linux_2/Embedded_Linux_Task3/MCAL/Includes/: DIO.h  PORT.h  bitmath.h  std_types.h
Embedded_Linux_2/Embedded_Linux_Task3/MCAL/Lib/: DIO.c  PORT.c
Embedded_Linux_2/Embedded_Linux_Task3/PORT_Configuration/: PORT_Cfg.c
Embedded_Linux_2/Embedded_Linux_Task4/: Readme.md  makefile
Embedded_Linux_2/Embedded_Linux_Task4/MCAL/Includes/: DIO_Private.h  PORT_Cfg.h
Embedded_Linux_3/: CMakeLists.txt  main.c
Embedded_Linux_3/Calculator_Libraries/: .main.c.swo  .main.c.swp  CMakeLists.txt
Embedded_Linux_3/Calculator_Libraries/Library_Lab/Lib/: addition.c  division.c
Embedded_Linux_4/: README.md
exam1/: config_parser.sh
